--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -152,6 +152,7 @@ a {
 li {
   list-style-type: none;
   padding: 0;
+  display: block;
 }
 span {
   display: inline-block;
@@ -192,7 +193,38 @@ input::placeholder {
 /* =======================
 REUSED CLASSES
 ==========================*/
+.container {
+  width: 95vw;
+  max-width: var(--max-width);
+  margin: 0 auto;
+}
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.section {
+  padding: 2rem 0;
+}
 
+.sidebar {
+  width: 70vw;
+  max-width: 400px;
+  position: fixed;
+  z-index: 18;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: var(--white);
+  height: 100vh;
+  transform: translate(-100%);
+  /* flickering effect on refresh */
+  transition: var(--transition);
+}
+.sidebar.sidebar-open {
+  transform: translate(0%);
+}
 /* =======================
 ANIMATIONS
 ==========================*/
@@ -252,6 +284,7 @@ MODAL
   visibility: hidden;
   pointer-events: none;
   opacity: 0;
+  z-index: 2;
 }
 .show-modal {
   animation: popup 1s ease-in-out 6s forwards;
@@ -372,4 +405,187 @@ NOTIFICATION-TOAST
   font-weight: var(--weight-600);
   margin: 0;
   margin-top: 0.25rem;
+}
+
+/* ==============
+HEADER
+================= */
+.header-top {
+  display: none;
+}
+.header-main {
+  padding: 1rem 0;
+}
+.header-main .user-actions {
+  display: none;
+}
+.header-main .container {
+  display: block;
+  text-align: center;
+}
+.logo {
+  font-size: var(--fs-1);
+}
+.header-search-container {
+  position: relative;
+  z-index: 1;
+}
+.search-input:focus,
+.search-input:active {
+  outline: 2px solid var(--salmon-pink);
+}
+
+.search-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0.75rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.desktop-navigation-menu {
+  display: none;
+}
+.mobile-bottom-navigation {
+  position: fixed;
+  bottom: 0;
+
+  left: 0;
+  right: 0;
+
+  padding: 0.75rem 0;
+  display: flex;
+  justify-content: space-around;
+  z-index: 5;
+  /* box shadow to be added */
+}
+.mobile-bottom-navigation .action-btn {
+  background: transparent;
+  border: none;
+  position: relative;
+  cursor: pointer;
+}
+.action-btn .count {
+  position: absolute;
+  width: 1rem;
+  height: 1rem;
+  background: var(--salmon-pink);
+  border-radius: 50%;
+  right: -25%;
+  top: -25%;
+  font-size: var(--fs-10);
+  display: grid;
+  place-items: center;
+  color: var(--white);
+}
+.mobile-bottom-navigation ion-icon {
+  font-size: var(--fs-1);
+}
+
+.mobile-navigation-menu {
+  background: var(--white);
+  height: 100%;
+}
+.menu-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+  border-bottom: 2px solid var(--cultured);
+}
+.menu-top h3 {
+  font-size: var(--fs-3);
+  margin-bottom: 0;
+  font-weight: var(--weight-600);
+  color: var(--salmon-pink);
+}
+.sidebar-close-btn {
+  border: transparent;
+  background: transparent;
+  font-size: var(--fs-1);
+  --ionicon-stroke-width: 50px;
+}
+.mobile-menu-category-list {
+  /* padding-top: 0.5rem; */
+}
+.accordion-menu {
+  width: 100%;
+  background: transparent;
+  border: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.75rem 1.5rem;
+  cursor: pointer;
+  border-bottom: 2px solid var(--cultured);
+}
+.menu-title {
+  font-weight: var(--weight-500);
+  font-size: var(--fs-5);
+  margin-bottom: 0;
+  letter-spacing: 1px;
+}
+.menu-category > .menu-title {
+  padding: 0.75rem 1.5rem;
+}
+.add-icon,
+.remove-icon {
+  font-size: var(--fs-2);
+  font-weight: var(--weight-700);
+  color: var(--onyx);
+  --ionicon-stroke-width: 50px;
+}
+
+.remove-icon {
+  display: none;
+}
+.submenu-category-list {
+  height: 0;
+  overflow: hidden;
+  padding: 0;
+  margin: 0 1rem;
+  transition: var(--transition);
+}
+
+.submenu-category {
+  padding: 0.35rem 1rem;
+  color: var(--sonic-silver);
+  text-transform: capitalize;
+  font-size: var(--fs-7);
+}
+
+.menu-bottom {
+  padding-top: 2rem;
+}
+.menu-bottom .accordion-menu {
+  border: none;
+}
+.menu-bottom .submenu-category-list {
+  box-shadow: 0 0 10px hsl(0deg 0% 0% / 5%);
+  /* height: min-content; */
+}
+.submenu-category-list.show-submenu {
+  height: 142px;
+
+  /* height: max-content; */
+}
+
+.menu-bottom .social-links {
+  margin-top: 2rem;
+}
+.social-links {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.social-link {
+  background-color: var(--cultured);
+  padding: 0.5rem;
+  border-radius: var(--borderRadius-lg);
+  font-size: var(--fs-3);
+  display: grid;
+  place-items: center;
 }
