--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,12 +189,30 @@ input::placeholder {
 .btn:hover {
   background: var(--black);
 }
+body::-webkit-scrollbar {
+  width: 15px;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--white);
+  border-left: 1px solid var(--cultured);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: hsl(0, 0%, 80%);
+  border: 3px solid var(--white);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: hsl(0, 0%, 70%);
+}
 
 /* =======================
 REUSED CLASSES
 ==========================*/
 .container {
-  width: 95vw;
+  width: 90vw;
   max-width: var(--max-width);
   margin: 0 auto;
 }
@@ -204,9 +222,18 @@ REUSED CLASSES
   align-items: center;
 }
 .section {
-  padding: 2rem 0;
+  padding-bottom: 1rem;
 }
+.section .flex-container.has-scrollbar {
+  overflow-x: scroll;
 
+  gap: 2rem;
+  scroll-snap-type: inline mandatory;
+  overscroll-behavior: contain;
+}
+.section .flex-container.has-scrollbar > article {
+  scroll-snap-align: start;
+}
 .sidebar {
   width: 70vw;
   max-width: 400px;
@@ -225,6 +252,29 @@ REUSED CLASSES
 .sidebar.sidebar-open {
   transform: translate(0%);
 }
+
+.has-scrollbar {
+  padding-bottom: 5px;
+}
+
+.has-scrollbar::-webkit-scrollbar {
+  width: 12px; /* for vertical scroll */
+  height: 12px; /* for horizontal scroll */
+}
+.has-scrollbar::-webkit-scrollbar-thumb {
+  background: transparent;
+  border: 3px solid var(--white);
+  border-radius: 20px;
+}
+
+.has-scrollbar:hover::-webkit-scrollbar-thumb {
+  background: hsl(0, 0%, 90%);
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: hsl(0, 0%, 80%);
+}
+
 /* =======================
 ANIMATIONS
 ==========================*/
@@ -459,6 +509,7 @@ HEADER
   display: flex;
   justify-content: space-around;
   z-index: 5;
+  background-color: var(--white);
   /* box shadow to be added */
 }
 .mobile-bottom-navigation .action-btn {
@@ -506,6 +557,22 @@ HEADER
   background: transparent;
   font-size: var(--fs-1);
   --ionicon-stroke-width: 50px;
+  display: grid;
+  place-items: center;
+}
+.sidebar-open.sidebar::before {
+  content: "";
+  top: 0;
+  left: 0;
+  background: rgb(0, 0, 0, 0.5);
+
+  position: fixed;
+  z-index: -2;
+  /* width: 100vw;
+  taking time to cover as sidebar is -100 translated
+  */
+  width: 200vw;
+  height: 100vh;
 }
 .mobile-menu-category-list {
   /* padding-top: 0.5rem; */
@@ -588,4 +655,593 @@ HEADER
   font-size: var(--fs-3);
   display: grid;
   place-items: center;
+}
+
+/* ===============
+TESTIMONIAL
+================= */
+.title {
+  font-size: var(--fs-5);
+  font-weight: var(--weight-700);
+  letter-spacing: 1px;
+  border-bottom: 2px solid var(--cultured);
+  padding: 1rem 0;
+  margin-bottom: 2rem;
+}
+.testimonial {
+  border-radius: var(--borderRadius-lg);
+  background: var(--white);
+  text-align: center;
+  border: 2px solid var(--cultured);
+  padding: 1rem 2rem;
+}
+.person-img-container {
+  height: 5rem;
+  width: 5rem;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 1rem auto;
+}
+.person-name {
+  font-size: var(--fs-5);
+  font-weight: var(--weight-700);
+  text-transform: uppercase;
+  color: var(--sonic-silver);
+  margin-bottom: 0rem;
+}
+.person-designation {
+  margin: 0rem;
+  color: var(--onyx);
+  margin-top: 0.3rem;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.quotation-img {
+  width: 2rem;
+  margin: 0.75rem auto;
+}
+.person-review {
+  color: var(--sonic-silver);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* ==========
+CTA
+============= */
+.cta-section {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  height: 60vh;
+  border-radius: var(--borderRadius-lg);
+  display: grid;
+  place-items: center;
+  background: url(../images/cta-banner.jpg) center/cover;
+}
+.cta-content {
+  background-color: rgba(249, 249, 251, 0.756);
+  text-align: center;
+  border-radius: var(--borderRadius-lg);
+  padding: 2rem 2.15rem;
+}
+.cta-discount-btn {
+  background: var(--eerie-black);
+}
+.cta-title {
+  margin: 0.5rem auto;
+  font-size: var(--fs-1);
+  text-transform: capitalize;
+  letter-spacing: 0.75px;
+  color: var(--eerie-black);
+  font-weight: var(--weight-700);
+}
+.cta-meta {
+  margin: 0.5rem auto;
+  color: var(--sonic-silver);
+  text-transform: capitalize;
+  letter-spacing: 0.5px;
+  margin-bottom: 0rem;
+}
+.cta-btn {
+  text-transform: uppercase;
+  color: var(--davys-gray);
+  font-weight: var(--weight-500);
+}
+/* ===================
+BANNER
+====================== */
+.banner-container {
+  /* overflow-x: scroll; */
+
+  height: 23rem;
+  /* gap: 2rem;
+  scroll-snap-type: inline mandatory;
+  overscroll-behavior-inline: contain; */
+}
+.banner {
+  min-width: 100%;
+  position: relative;
+  height: 100%;
+  border-radius: var(--borderRadius-lg);
+  /* overflow: hidden;
+  scroll-snap-align: start; */
+}
+.banner-img {
+  height: 100%;
+  /* aspect-ratio: 1/1;
+  object-fit: cover; */
+  object-position: right;
+}
+.banner-content {
+  position: absolute;
+  background: rgba(255, 255, 255, 0.245);
+  background: rgba(255, 255, 255, 0.745);
+
+  padding: 1rem 2rem;
+  border-radius: var(--borderRadius-lg);
+  top: 35%;
+  transform: translateX(-50%);
+  /* left: 5%; */
+  width: 80%;
+
+  left: 50%;
+  padding: 1rem;
+  top: 50%;
+}
+.banner-content .banner-title {
+  margin: 0;
+  letter-spacing: normal;
+  line-height: 1.25;
+  font-weight: var(--weight-700);
+  color: var(--eerie-black);
+  max-width: 20rem;
+  font-size: var(--fs-2);
+  margin-bottom: 0.75rem;
+}
+.banner-content .banner-subtitle {
+  letter-spacing: normal;
+  margin: 0;
+  color: var(--salmon-pink);
+  margin-bottom: 0.75rem;
+  font-size: var(--fs-4);
+}
+.banner-content .banner-text {
+  display: none;
+}
+
+.banner-content .banner-text span {
+  font-size: var(--fs-1);
+}
+/* ===================
+SERVICE
+====================== */
+.service-item-container {
+  background-color: var(--white);
+  border: 2px solid var(--cultured);
+  flex-wrap: wrap;
+  display: flex;
+  /* justify-content: center; */
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 1.5rem;
+  padding: 1rem;
+  /*  display: grid;
+ grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+  place-items: center; */
+}
+.service-item {
+  /* display: flex;
+  gap: 1rem;
+  width: 100%; */
+  display: grid;
+  gap: 0.5rem;
+  /* justify-items: start; */
+  /* width: 100%; */
+  align-items: center;
+  min-width: 200px;
+  grid-template-columns: 1fr 3fr;
+  /* background-color: #475569; */
+  /* margin-left: auto;
+  margin-right: auto; */
+  transition: var(--transition);
+}
+.service-icon {
+  color: var(--salmon-pink);
+  font-size: var(--fs-1);
+  --ionicon-stroke-width: 25px;
+  /* width: 100%; */
+  font-size: 35px;
+  transform: var(--transition);
+}
+
+.service-item:hover .service-icon {
+  color: var(--eerie-black);
+}
+.service-title {
+  font-size: var(--fs-7);
+  margin-bottom: 0.25rem;
+  color: var(--sonic-silver);
+  font-weight: var(--weight-600);
+  letter-spacing: 0.75px;
+}
+.service-desc {
+  color: var(--sonic-silver);
+  font-size: var(--fs-9);
+  margin-bottom: 0;
+  min-width: max-content;
+}
+
+/* =============
+CATEGORY
+================ */
+.category-container {
+  overflow-x: scroll;
+  gap: 2rem;
+  scroll-snap-type: inline mandatory;
+  overscroll-behavior-inline: contain;
+}
+.category-item {
+  /* min-width: calc(50% - 2rem); */
+  min-width: 100%;
+  display: flex;
+  scroll-snap-align: start;
+  justify-content: space-between;
+  border: 2px solid var(--cultured);
+  padding: 1rem;
+  border-radius: var(--borderRadius-md);
+}
+.category-img-container {
+  width: 3.25rem;
+  background: var(--cultured);
+  border: 1px solid hsl(0, 0%, 80%);
+  padding: 0.5rem;
+  border-radius: var(--borderRadius-md);
+  overflow: hidden;
+}
+.category-banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+.category-title {
+  font-size: var(--fs-9);
+  font-weight: var(--weight-600);
+  margin-bottom: 0.25rem;
+  color: var(--eerie-black);
+  letter-spacing: 0.5px;
+}
+.category-cta {
+  color: var(--salmon-pink);
+  font-size: var(--fs-9);
+}
+.category-meta {
+  font-size: var(--fs-11);
+  color: var(--sonic-silver);
+}
+
+/* =============
+New Arrival
+================ */
+.product-list {
+  min-width: 100%;
+  scroll-snap-align: start;
+}
+.product {
+  padding: 1rem;
+  min-width: 100%;
+  display: flex;
+  gap: 1rem;
+  border: 2px solid var(--cultured);
+  border-radius: var(--borderRadius-md);
+  margin-bottom: 1rem;
+}
+.product:last-child {
+  margin-bottom: 0;
+}
+.product-img-container {
+  width: 4.5rem;
+  place-items: center;
+  display: grid;
+}
+.product-title {
+  font-size: var(--fs-7);
+  font-weight: var(--weight-600);
+  color: var(--eerie-black);
+  margin-bottom: 0;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+}
+.product-category {
+  font-size: var(--fs-8);
+  color: var(--sonic-silver);
+  font-weight: var(--weight-500);
+  letter-spacing: 1px;
+  margin: 0.25rem 0;
+}
+.product-price-box {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+.product-discounted-price {
+  color: var(--salmon-pink);
+  font-size: var(--fs-7);
+  font-weight: var(--weight-600);
+  margin-bottom: 0;
+  letter-spacing: 1px;
+}
+.product-price {
+  font-size: var(--fs-9);
+  color: var(--sonic-silver);
+  margin-bottom: 0;
+  letter-spacing: 1px;
+}
+
+/* ===========
+FEATURED PRODUCT
+============== */
+.featured-product {
+  min-width: 100%;
+  padding: 1rem 2rem;
+  border: 1px solid var(--cultured);
+  background: var(--white);
+  display: grid;
+  gap: 1rem;
+  border-radius: var(--borderRadius-md);
+}
+
+.product-rating-box {
+  color: var(--sandy-brown);
+  margin: 0.5rem 0;
+}
+.countdown-alert {
+  font-size: var(--fs-9);
+  font-weight: var(--weight-600);
+  margin-bottom: 0.75rem;
+  letter-spacing: 0.5px;
+}
+.countdown-timer-container {
+  display: flex;
+  gap: 1rem;
+}
+.countdown-timer-item {
+  background: var(--cultured);
+  padding: 0.25rem 0.65rem;
+  border-radius: var(--borderRadius-lg);
+  display: grid;
+  place-items: center;
+}
+.time-left {
+  font-weight: var(--weight-500);
+  font-size: var(--fs-4);
+  color: var(--eerie-black);
+  letter-spacing: 0.65px;
+}
+.time-meta {
+  margin-bottom: 0;
+  font-size: var(--fs-10);
+  color: var(--sonic-silver);
+  margin-top: -0.35rem;
+  font-weight: var(--weight-500);
+}
+.product-desc {
+  font-size: var(--fs-7);
+  color: var(--sonic-silver);
+  line-height: 1.4;
+  margin: 0.35rem 0;
+  letter-spacing: 1px;
+}
+.featured-product .product-price-box {
+  margin: 0.5rem 0;
+}
+.featured-product .product-price-box p {
+  font-size: var(--fs-3);
+}
+.product-status-info {
+  display: flex;
+  justify-content: space-between;
+}
+.product-sold,
+.product-available {
+  margin-bottom: 0.5rem;
+  color: var(--davys-gray);
+  text-transform: uppercase;
+  font-size: var(--fs-9);
+  letter-spacing: 0.5px;
+  font-weight: var(--weight-500);
+}
+.add-to-cart-btn {
+  margin-bottom: 1rem;
+  padding: 0.65rem 0.85rem;
+  font-weight: var(--weight-600);
+  text-transform: uppercase;
+  border-radius: var(--borderRadius-md);
+}
+.status-bar {
+  width: 100%;
+  height: 0.35rem;
+  background: var(--cultured);
+  border-radius: var(--borderRadius-md);
+  overflow: hidden;
+  margin-bottom: 1rem;
+}
+.status-bar-count {
+  width: 40%;
+  height: 100%;
+  background: var(--salmon-pink);
+}
+
+/* ===============
+NEW PRODUCT
+================== */
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+.category-product {
+  position: relative;
+  padding: 1rem;
+  background: var(--white);
+  border-radius: var(--borderRadius-lg);
+  box-shadow: var(--shadow-2);
+}
+.category-product-img-container {
+  height: 11rem;
+}
+.category-product-img {
+  height: 100%;
+}
+.product-badge {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: rotate(135);
+}
+.product-actions {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  transform: translateX(1rem);
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--transition);
+}
+.action-btn {
+  background: var(--white);
+  color: var(--sonic-silver);
+  border: 2px solid var(--cultured);
+  padding: 0.375rem;
+  display: grid;
+  place-items: center;
+  border-radius: var(--borderRadius-sm);
+  transition: var(--transition);
+  box-shadow: var(--shadow-2);
+}
+.action-btn:hover {
+  background: var(--eerie-black);
+  color: var(--white);
+  transform: scale(1.07);
+}
+.category-product .product-title {
+  color: var(--salmon-pink);
+  font-size: var(--fs-9);
+  margin-bottom: 0.65rem;
+}
+.category-product .product-desc {
+  color: var(--sonic-silver);
+  font-size: var(--fs-8);
+  text-transform: capitalize;
+}
+.category-product .product-rating-box {
+  margin: 0;
+}
+.category-product .product-discounted-price {
+  color: var(--eerie-black);
+  font-weight: var(--weight-700);
+}
+.category-product .product-price {
+  font-size: var(--fs-7);
+  font-weight: var(--weight-500);
+}
+
+.category-product:hover .product-actions {
+  transform: translateX(0);
+  opacity: 1;
+  visibility: visible;
+}
+/* ===============
+BLOG
+=================== */
+.blog {
+  min-width: 100%;
+}
+.blog-img-container {
+  border-radius: var(--borderRadius-xl);
+  overflow: hidden;
+  height: 17rem;
+  margin-bottom: 1rem;
+}
+.blog-img-container img {
+  height: 100%;
+}
+
+/* .blog-details {
+  margin: 1rem auto;
+} */
+.blog-category {
+  color: var(--salmon-pink);
+  font-size: var(--fs-7);
+}
+.blog-title {
+  font-size: var(--fs-6);
+  font-weight: var(--weight-600);
+  margin-bottom: 0.25rem;
+  letter-spacing: 0.75px;
+}
+.blog-author {
+  font-size: var(--fs-7);
+  color: var(--sonic-silver);
+  margin-bottom: 0;
+}
+
+/* =================
+FOOTER
+=================== */
+.footer {
+  padding: 1.5rem 1rem;
+  background-color: var(--eerie-black);
+  color: var(--sonic-silver);
+}
+.footer .title {
+  border-bottom: 0;
+  margin: 0;
+  color: var(--salmon-pink);
+  text-transform: capitalize;
+}
+.footer-product-category-list {
+  display: flex;
+  gap: 0 0.5rem;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+.footer .product-category-title {
+  color: var(--spanish-gray);
+  font-size: var(--fs-7);
+  text-transform: uppercase;
+}
+.footer .product-category-list-item {
+  border-right: 2px solid var(--davys-gray);
+  padding-right: 0.5rem;
+  color: var(--spanish-gray);
+  padding-bottom: 0.2rem;
+  font-size: var(--fs-8);
+  transition: var(--transition);
+}
+.footer .product-category-list-item:hover {
+  color: var(--cultured);
+}
+.footer-title .title {
+  color: var(--white);
+  text-transform: uppercase;
+  font-size: var(--fs-8);
+}
+.footer-title .underline {
+  margin-top: -0.5rem;
+  margin-bottom: 1rem;
+  width: 5rem;
+  height: 0.05rem;
+  background-color: var(--salmon-pink);
+}
+.footer .footer-category-list-item {
+  transition: var(--transition);
+}
+.footer .footer-category-list-item:hover {
+  color: var(--salmon-pink);
 }
