--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,12 +222,12 @@ REUSED CLASSES
   align-items: center;
 }
 .section {
-  padding-bottom: 1rem;
+  padding: 1rem;
 }
 .section .flex-container.has-scrollbar {
   overflow-x: scroll;
 
-  gap: 2rem;
+  gap: 1rem;
   scroll-snap-type: inline mandatory;
   overscroll-behavior: contain;
 }
@@ -403,29 +403,31 @@ NOTIFICATION-TOAST
 ======================== */
 
 .notification-toast-container {
-  max-width: 320px;
+  max-width: 310px;
   /* background-color: #0f172a; */
   position: fixed;
   bottom: 6rem;
   left: 2rem;
+  right: 2rem;
   display: flex;
   align-items: center;
   gap: 0.75rem;
   background: var(--white);
-  padding: 0.75rem;
+  padding: 1rem 0.75rem;
   border-radius: var(--borderRadius-md);
   box-shadow: var(--shadow-3);
   transform: translateX(-120%);
   transition: var(--transition);
   animation: slide-in-out 4s ease-out 4s infinite;
+  z-index: 3;
 }
 .notification-toast-container.stop-animation {
   animation: none;
 }
 .toast-close-btn {
   position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
+  top: 0.25rem;
+  right: 0.25rem;
   border: none;
   padding: 0;
   font-size: var(--fs-2);
@@ -441,14 +443,14 @@ NOTIFICATION-TOAST
   border-radius: var(--borderRadius-md);
 }
 .toast-info {
-  flex: 75%;
+  flex: 70%;
 }
 .toast-message,
 .toast-meta {
-  font-size: var(--fs-7);
+  font-size: var(--fs-6);
   color: var(--sonic-silver);
   margin: 0;
-  line-height: 1.25;
+  line-height: 1.2;
 }
 .toast-title {
   font-size: var(--fs-5);
@@ -511,6 +513,8 @@ HEADER
   z-index: 5;
   background-color: var(--white);
   /* box shadow to be added */
+  border-top-left-radius: var(--borderRadius-xl);
+  border-top-right-radius: var(--borderRadius-xl);
 }
 .mobile-bottom-navigation .action-btn {
   background: transparent;
@@ -559,6 +563,10 @@ HEADER
   --ionicon-stroke-width: 50px;
   display: grid;
   place-items: center;
+  transition: var(--transition);
+}
+.sidebar-close-btn:hover {
+  transform: rotate(180deg);
 }
 .sidebar-open.sidebar::before {
   content: "";
@@ -655,6 +663,11 @@ HEADER
   font-size: var(--fs-3);
   display: grid;
   place-items: center;
+  transition: var(--transition);
+}
+.social-link:hover {
+  color: var(--salmon-pink);
+  background: var(--eerie-black);
 }
 
 /* ===============
@@ -665,9 +678,12 @@ TESTIMONIAL
   font-weight: var(--weight-700);
   letter-spacing: 1px;
   border-bottom: 2px solid var(--cultured);
-  padding: 1rem 0;
-  margin-bottom: 2rem;
+  padding: 0.5rem 0;
+  /* margin-bottom: 2rem; */
+  margin-bottom: 0.5rem;
+  /* margin-left: 1rem; */
 }
+
 .testimonial {
   border-radius: var(--borderRadius-lg);
   background: var(--white);
@@ -728,6 +744,9 @@ CTA
 .cta-discount-btn {
   background: var(--eerie-black);
 }
+.cta-discount-btn:hover {
+  background: var(--salmon-pink);
+}
 .cta-title {
   margin: 0.5rem auto;
   font-size: var(--fs-1);
@@ -747,6 +766,10 @@ CTA
   text-transform: uppercase;
   color: var(--davys-gray);
   font-weight: var(--weight-500);
+  transition: var(--transition);
+}
+.cta-btn:hover {
+  color: var(--salmon-pink);
 }
 /* ===================
 BANNER
@@ -905,7 +928,7 @@ CATEGORY
   align-items: center;
   gap: 1rem;
 }
-.category-title {
+.product-category-title {
   font-size: var(--fs-9);
   font-weight: var(--weight-600);
   margin-bottom: 0.25rem;
@@ -1079,7 +1102,7 @@ NEW PRODUCT
 .product-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
+  gap: 1rem;
 }
 .category-product {
   position: relative;
@@ -1087,18 +1110,43 @@ NEW PRODUCT
   background: var(--white);
   border-radius: var(--borderRadius-lg);
   box-shadow: var(--shadow-2);
+  overflow: hidden;
 }
 .category-product-img-container {
-  height: 11rem;
+  height: 10rem;
 }
 .category-product-img {
   height: 100%;
 }
 .product-badge {
   position: absolute;
-  top: 0;
-  left: 0;
-  transform: rotate(135);
+  font-weight: var(--weight-500);
+  background: var(--eerie-black);
+  color: var(--white);
+  padding: 0.85rem 2.5rem;
+  line-height: 0;
+  text-transform: uppercase;
+  font-size: var(--fs-8);
+  letter-spacing: 1px;
+}
+.sale-badge {
+  top: 2.5%;
+  left: -13.5%;
+  transform: rotate(318deg);
+}
+.new-badge {
+  top: 2.5%;
+  left: -13.5%;
+  transform: rotate(318deg);
+  background: var(--salmon-pink);
+  color: var(--white);
+}
+.discount-badge {
+  background-color: var(--ocean-green);
+  padding: 0.375rem 0.5rem;
+  line-height: 0.75;
+  border-radius: var(--borderRadius-lg);
+  font-weight: var(--weight-600);
 }
 .product-actions {
   position: absolute;
@@ -1112,7 +1160,7 @@ NEW PRODUCT
   visibility: hidden;
   transition: var(--transition);
 }
-.action-btn {
+.product-actions .action-btn {
   background: var(--white);
   color: var(--sonic-silver);
   border: 2px solid var(--cultured);
@@ -1123,7 +1171,7 @@ NEW PRODUCT
   transition: var(--transition);
   box-shadow: var(--shadow-2);
 }
-.action-btn:hover {
+.product-actions .action-btn:hover {
   background: var(--eerie-black);
   color: var(--white);
   transform: scale(1.07);
@@ -1197,6 +1245,7 @@ FOOTER
   padding: 1.5rem 1rem;
   background-color: var(--eerie-black);
   color: var(--sonic-silver);
+  padding-bottom: 5rem;
 }
 .footer .title {
   border-bottom: 0;
@@ -1233,15 +1282,32 @@ FOOTER
   font-size: var(--fs-8);
 }
 .footer-title .underline {
-  margin-top: -0.5rem;
-  margin-bottom: 1rem;
+  margin-top: 0.15rem;
+  margin-bottom: 0.5rem;
   width: 5rem;
   height: 0.05rem;
   background-color: var(--salmon-pink);
+}
+.footer .footer-category-list {
+  margin: 0.5rem 0;
 }
 .footer .footer-category-list-item {
   transition: var(--transition);
 }
 .footer .footer-category-list-item:hover {
   color: var(--salmon-pink);
+}
+
+.footer-category-list-item.contact {
+  display: flex;
+  gap: 0.5rem;
+}
+.footer-category-list-item.contact p {
+  margin: 0;
+}
+.footer .social-links {
+  justify-content: flex-start;
+}
+.footer .social-link {
+  background: transparent;
 }
